educaiton an experience

--- a/force-app/main/default/lwc/portfolioBody/portfolioBody.html
+++ b/force-app/main/default/lwc/portfolioBody/portfolioBody.html
@@ -4,10 +4,10 @@
             <c-portfolio-about portfolio-id={portfolioId} static-resource-path={staticResourcePath}></c-portfolio-about>
         </lightning-tab>
         <lightning-tab label="Experience">
-            Two Content !
+            <c-portfolio-experience portfolio-id={portfolioId}></c-portfolio-experience>
         </lightning-tab>
         <lightning-tab label="Education">
-            Three Content !
+            <c-portfolio-education portfolio-id={portfolioId}></c-portfolio-education>
         </lightning-tab>
         <lightning-tab label="Contact Me">
             <c-contact-form></c-contact-form>
