--- a/force-app/main/default/lwc/portfolioBody/portfolioBody.html
+++ b/force-app/main/default/lwc/portfolioBody/portfolioBody.html
@@ -10,7 +10,7 @@
             <c-portfolio-education portfolio-id={portfolioId}></c-portfolio-education>
         </lightning-tab>
         <lightning-tab label="Contact Me">
-            <c-contact-form></c-contact-form>
+            <c-portfolio-contact-form></c-portfolio-contact-form>
         </lightning-tab>
     </lightning-tabset>
 </template>
