--- a/force-app/main/default/lwc/portfolioExperienceCard/portfolioExperienceCard.html
+++ b/force-app/main/default/lwc/portfolioExperienceCard/portfolioExperienceCard.html
@@ -1,7 +1,7 @@
 <template>
     <lightning-card>
         <h3 slot="title">
-            {item.award}
+            {item.role}
         </h3>
         <div class="slds-var-m-horizontal_small">
             <p>{item.organization}</p>
