--- a/force-app/main/default/lwc/portfolioEducation/portfolioEducation.html
+++ b/force-app/main/default/lwc/portfolioEducation/portfolioEducation.html
@@ -1,38 +1,44 @@
 <template>
-    <!-- <template if:false={education.data}>
-        <lightning-spinner alternative-text="Loading"></lightning-spinner>
-    </template> -->
-    <template if:true={degrees.data}>
-        <lightning-layout multiple-rows horizontal-align="spread">
-            <lightning-layout-item
-            size="12"
-            small-device-size="12"
-            medium-device-size="5"
-            large-device-size="5"  
-            padding="around-small"
-            class="slds-var-m-around_medium">
-                <div>
-                    <h2>Degrees</h2>
-                </div>
+    <lightning-layout multiple-rows horizontal-align="spread">
+        <lightning-layout-item
+        size="12"
+        small-device-size="12"
+        medium-device-size="6"
+        large-device-size="6"  
+        padding="around-small">
+            <div>
+                <h2>Degrees</h2>
+            </div>
+            <template if:false={degrees.data}>
+                <lightning-spinner alternative-text="Loading"></lightning-spinner>
+            </template>
+            <template if:true={degrees.data}>
                 <template for:each={formattedDegrees} for:item="degree">
-                    <c-portfolio-education-card key={degree.id} item={degree}></c-portfolio-education-card>
+                    <div key={degree.id} class="slds-m-vertical_small">
+                        <c-portfolio-education-card item={degree}></c-portfolio-education-card>
+                    </div>
                 </template>
-            </lightning-layout-item>
-            <lightning-layout-item
-            size="12"
-            small-device-size="12"
-            medium-device-size="5"
-            large-device-size="5"  
-            padding="around-small"
-            class="slds-var-m-around_medium">
-                <div>
-                    <h2>Certificates</h2>
-                </div>
+            </template>
+        </lightning-layout-item>
+        <lightning-layout-item
+        size="12"
+        small-device-size="12"
+        medium-device-size="6"
+        large-device-size="6"  
+        padding="around-small">
+            <div>
+                <h2>Certificates</h2>
+            </div>
+            <template if:false={certificates.data}>
+                <lightning-spinner alternative-text="Loading"></lightning-spinner>
+            </template>
+            <template if:true={certificates.data}>
                 <template for:each={formattedCertificates} for:item="certificate">
-                    <c-portfolio-education-card key={certificate.id} item={certificate}></c-portfolio-education-card>
+                    <div key={certificate.id} class="slds-m-vertical_small">
+                        <c-portfolio-education-card item={certificate}></c-portfolio-education-card>
+                    </div>
                 </template>
-            </lightning-layout-item>
-            </lightning-layout-item>
-        </lightning-layout>
-    </template>
+            </template>
+        </lightning-layout-item>
+    </lightning-layout>
 </template>
