--- a/force-app/main/default/lwc/portfolioContainer/portfolioContainer.html
+++ b/force-app/main/default/lwc/portfolioContainer/portfolioContainer.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-layout multiple-rows horizontal-align="spread" class="portfolio-container" slds-grid_pull-padded>
+    <lightning-layout multiple-rows horizontal-align="spread" class="portfolio-container slds-m-around_none" slds-grid_pull-padded>
         <lightning-layout-item 
         size="12"
         small-device-size="12"
