--- a/force-app/main/default/lwc/portfolioFooterAbout/portfolioFooterAbout.html
+++ b/force-app/main/default/lwc/portfolioFooterAbout/portfolioFooterAbout.html
@@ -8,7 +8,7 @@
         </div>
         <div class="slds-var-m-horizontal_small">
             <p>I am an aspiring Salesforce Developer and to learn a bit more about 
-                the possibilites I created this page from Lightnging Web 
+                the possibilites I created this page from Lightning Web 
                 Components. All the data comes from custom objects in Salesforce. 
                 Please send me some feedback in the contact form.
             </p>
