--- a/force-app/main/default/lwc/portfolioHeader/portfolioHeader.html
+++ b/force-app/main/default/lwc/portfolioHeader/portfolioHeader.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-card class="slds-border">
+    <lightning-card class="slds-border portfolio-header">
         <div slot="title">
             <h1>
                 <lightning-icon icon-name="standard:user" size="small"></lightning-icon>
