--- a/force-app/main/default/lwc/portfolioAbout/portfolioAbout.html
+++ b/force-app/main/default/lwc/portfolioAbout/portfolioAbout.html
@@ -6,7 +6,7 @@
                 <span class="slds-var-m-left_small">About Me</span>
             </h1>
         </div>
-        <div class="slds-text-align_center">
+        <div class="slds-text-align_left slds-var-m-horizontal_small">
             <h3>{text}</h3>
         </div>
     </lightning-card>
