time for a break

--- a/force-app/main/default/lwc/portfolioAbout/portfolioAbout.html
+++ b/force-app/main/default/lwc/portfolioAbout/portfolioAbout.html
@@ -7,7 +7,7 @@
             </h1>
         </div>
         <div class="slds-text-align_left slds-var-m-horizontal_small">
-            <h3>{text}</h3>
+            <p>{text}</p>
         </div>
     </lightning-card>
 </template>
