--- a/force-app/main/default/lwc/portfolioHeader/portfolioHeader.html
+++ b/force-app/main/default/lwc/portfolioHeader/portfolioHeader.html
@@ -7,7 +7,7 @@
             </h1>
         </div>
         <div class="slds-var-m-horizontal_small">
-            <h2>{summary}</h2>
+            <p>{summary}</p>
         </div>
     </lightning-card>
 </template>
