--- a/force-app/main/default/lwc/portfolioContactForm/portfolioContactForm.html
+++ b/force-app/main/default/lwc/portfolioContactForm/portfolioContactForm.html
@@ -25,7 +25,7 @@
             ></lightning-textarea>
             <lightning-button
                 label="Submit"
-                variant="brand"
+                variant="brand-outline"
                 onclick={submitForm}
             ></lightning-button>
         </div>
