--- a/force-app/main/default/lwc/portfolioContainer/portfolioContainer.html
+++ b/force-app/main/default/lwc/portfolioContainer/portfolioContainer.html
@@ -7,7 +7,7 @@
         large-device-size="12"  
         padding="around-small"
         >
-            <c-portfolio-header portfolio-id={portfolioId}></c-portfolio-header>
+            <c-portfolio-summary portfolio-id={portfolioId}></c-portfolio-summary>
         </lightning-layout-item>
         <lightning-layout-item 
         size="12" 
