--- a/force-app/main/default/lwc/portfolioEducationCard/portfolioEducationCard.html
+++ b/force-app/main/default/lwc/portfolioEducationCard/portfolioEducationCard.html
@@ -3,6 +3,38 @@
         <h3 slot="title">
             {item.award}
         </h3>
+        <template if:true={item.showDoc}>
+            <lightning-button 
+            slot="actions"
+            variant="neutral" 
+            label="View" 
+            title="View" 
+            onclick={showModal}>
+            </lightning-button>
+            <template if:true={openModal}>  
+                <div class="slds-modal slds-fade-in-open slds-backdrop">  
+                    <div class="slds-modal__container">  
+                        <!--  HEADER Section   -->
+                        <div class="slds-modal__header"> 
+                            <h1>{item.award}</h1> 
+                        </div>  
+                    <!--  Body Section  -->  
+                    <div class="slds-modal__content slds-p-around_medium">  
+                        <img src={item.imageSource} />
+                    </div>  
+                    <!--  Footer Section -->  
+                    <div class="slds-modal__footer">  
+                        <lightning-button 
+                        icon-name="utility:close" 
+                        label="Close" 
+                        variant="neutral" 
+                        onclick={closeModal}>  
+                        </lightning-button>  
+                    </div>  
+                  </div>  
+                </div>  
+              </template>  
+        </template>
         <div class="slds-var-m-horizontal_small">
             <p>{item.organization}</p>
             <template if:true={item.location}>
