--- a/force-app/main/default/lwc/portfolioHeader/portfolioHeader.html
+++ b/force-app/main/default/lwc/portfolioHeader/portfolioHeader.html
@@ -1,13 +1,6 @@
 <template>
-    <lightning-card class="slds-border portfolio-header">
-        <div slot="title">
-            <h1>
-                <lightning-icon icon-name="standard:user" size="small"></lightning-icon>
-                <span class="slds-var-m-left_small">{name}</span>
-            </h1>
-        </div>
-        <div class="slds-var-m-horizontal_small">
-            <p>{summary}</p>
-        </div>
-    </lightning-card>
+    <div class="portfolio-header">
+        <h1>Justin L. Martin</h1>
+        <h2>Salesforce Portfolio</h2>
+    </div>
 </template>
