Added Header Image

--- a/force-app/main/default/lwc/portfolioHeader/portfolioHeader.html
+++ b/force-app/main/default/lwc/portfolioHeader/portfolioHeader.html
@@ -1,6 +1,13 @@
 <template>
     <div class="portfolio-header">
-        <h1>Justin L. Martin</h1>
-        <h2>Salesforce Portfolio</h2>
+        <img class="background-image" src="/sfsites/c/resource/portfolioStaticResources/portfolioStaticResources/PortfolioHeader-1800.png" alt="Header Image" />
+        <img class="badge" src="/sfsites/c/resource/portfolioStaticResources/portfolioStaticResources/PlatformAppBuilder-200.png" />
+        <div class="badge-container">
+        
+        </div>
+        <div class="text-container">
+            <h1>Justin L. Martin</h1>
+            <h2>Salesforce Portfolio</h2>
+        </div>
     </div>
 </template>
