--- a/force-app/main/default/lwc/portfolioEducationCard/portfolioEducationCard.html
+++ b/force-app/main/default/lwc/portfolioEducationCard/portfolioEducationCard.html
@@ -12,28 +12,11 @@
             onclick={showModal}>
             </lightning-button>
             <template if:true={openModal}>  
-                <div class="slds-modal slds-fade-in-open slds-backdrop">  
-                    <div class="slds-modal__container">  
-                        <!--  HEADER Section   -->
-                        <div class="slds-modal__header"> 
-                            <h1>{item.award}</h1> 
-                        </div>  
-                    <!--  Body Section  -->  
-                    <div class="slds-modal__content slds-p-around_medium">  
-                        <img src={item.imageSource} />
-                    </div>  
-                    <!--  Footer Section -->  
-                    <div class="slds-modal__footer">  
-                        <lightning-button 
-                        icon-name="utility:close" 
-                        label="Close" 
-                        variant="neutral" 
-                        onclick={closeModal}>  
-                        </lightning-button>  
-                    </div>  
-                  </div>  
-                </div>  
-              </template>  
+                <c-portfolio-modal 
+                image-source={item.imageSource}
+                award={item.award}
+                onclosemodal={closeModal}></c-portfolio-modal>
+            </template>  
         </template>
         <div class="slds-var-m-horizontal_small">
             <p>{item.organization}</p>
