fixed bug, removed logs

--- a/force-app/main/default/lwc/portfolioHeader/portfolioHeader.html
+++ b/force-app/main/default/lwc/portfolioHeader/portfolioHeader.html
@@ -1,10 +1,8 @@
 <template>
     <div class="portfolio-header">
         <img class="background-image" src="/sfsites/c/resource/portfolioStaticResources/portfolioStaticResources/PortfolioHeader-1800.png" alt="Header Image" />
-        <img class="badge" src="/sfsites/c/resource/portfolioStaticResources/portfolioStaticResources/PlatformAppBuilder-200.png" />
-        <div class="badge-container">
-        
-        </div>
+        <img class="badge platform-app-builder-badge" src="/sfsites/c/resource/portfolioStaticResources/portfolioStaticResources/PlatformAppBuilder-200.png" />
+        <img class="badge javascript-developer-1-badge" src="/sfsites/c/resource/portfolioStaticResources/portfolioStaticResources/JavaScriptDeveloper1-200.png" />
         <div class="text-container">
             <h1>Justin L. Martin</h1>
             <h2>Salesforce Portfolio</h2>
