--- a/force-app/main/default/lwc/portfolioEducationCard/portfolioEducationCard.html
+++ b/force-app/main/default/lwc/portfolioEducationCard/portfolioEducationCard.html
@@ -23,7 +23,7 @@
             <template if:true={item.location}>
                 <p>{item.location}</p>
             </template>
-            <p>{item.awardDate}</p>
+            <p>{item.awardDatePrint}</p>
             <template if:true={item.bulletPoints}>
                 <ul class="slds-list_dotted">
                     <template for:each={item.bulletPoints} for:item="point" for:index="index">
