--- a/force-app/main/default/lwc/portfolioExperience/portfolioExperience.html
+++ b/force-app/main/default/lwc/portfolioExperience/portfolioExperience.html
@@ -10,10 +10,10 @@
                 <div>
                     <h3 class="body-header slds-text-heading_large">Professional</h3>
                 </div>
-                <template if:false={professional.data}>
+                <template if:false={records.data}>
                     <lightning-spinner alternative-text="Loading"></lightning-spinner>
                 </template>
-                <template if:true={professional.data}>
+                <template if:true={records.data}>
                     <template for:each={formattedProfessional} for:item="professional">
                         <div key={professional.id} class="slds-m-vertical_small">
                             <c-portfolio-experience-card item={professional}></c-portfolio-experience-card>
@@ -32,10 +32,10 @@
                 <div>
                     <h3 class="body-header slds-text-heading_large">Volunteer</h3>
                 </div>
-                <template if:false={volunteer.data}>
+                <template if:false={records.data}>
                     <lightning-spinner alternative-text="Loading"></lightning-spinner>
                 </template>
-                <template if:true={volunteer.data}>
+                <template if:true={records.data}>
                     <template for:each={formattedVolunteer} for:item="volunteer">
                         <div key={volunteer.id} class="slds-m-vertical_small">
                         <c-portfolio-experience-card item={volunteer}></c-portfolio-experience-card>
