--- a/force-app/main/default/lwc/portfolioExperienceCard/portfolioExperienceCard.html
+++ b/force-app/main/default/lwc/portfolioExperienceCard/portfolioExperienceCard.html
@@ -1,6 +1,6 @@
 <template>
     <lightning-card>
-        <h3 slot="title">
+        <h3 slot="title" class="wrap-text">
             {item.role}
         </h3>
         <div class="slds-var-m-horizontal_small">
