contact form edit

--- a/force-app/main/default/lwc/portfolioContactForm/portfolioContactForm.html
+++ b/force-app/main/default/lwc/portfolioContactForm/portfolioContactForm.html
@@ -8,12 +8,9 @@
         </div>
         <div class="body slds-var-p-horizontal_small">
             <p>This is a Salesforce Screen Flow embedded in a Lightning Web Component. 
-            I recommend using Chrome as the input fields may not render in other browsers 
+            I recommend using Chrome or Safari as the input fields may not render in other browsers 
             (If you know why, please let me know 😊)</p>
         </div>
-            <lightning-flow
-        flow-api-name="Contact_Form_Flow"
-        >
-        </lightning-flow>
+        <lightning-flow flow-api-name="Contact_Form_Flow"></lightning-flow>
     </lightning-card>
 </template>
