--- a/force-app/main/default/lwc/portfolioExperienceCard/portfolioExperienceCard.html
+++ b/force-app/main/default/lwc/portfolioExperienceCard/portfolioExperienceCard.html
@@ -1,21 +1,21 @@
 <template>
     <lightning-card>
-        <h3 slot="title" class="wrap-text">
-            {item.role}
+        <h3 slot="title" class="wrap-tex slds-text-heading_medium">
+            <b>{item.role}</b>
         </h3>
-        <div class="slds-var-m-horizontal_small">
-            <p>{item.organization}</p>
-            <template if:true={item.location}>
-                <p>{item.location}</p>
-            </template>
-            <p>{item.dateRange}</p>
-            <template if:true={item.bulletPoints}>
-                <ul class="slds-list_dotted">
-                    <template for:each={item.bulletPoints} for:item="point" for:index="index">
-                        <li key={point.index}>{point}</li>
-                    </template>
-                </ul>
-            </template>
+        <div class="slds-var-m-horizontal_small slds-p-left_x-small">
+            <p class="slds-text-heading_small">
+                <span>{item.organization}</span>
+                <template if:true={item.location}>
+                    <span class="slds-text-heading_small"> ({item.location})</span>
+                </template>
+            </p>
+            <p class="slds-text-heading_small">{item.dateRange}</p>
+            <ul class="slds-list_dotted">
+                <template for:each={details} for:item="detail">
+                    <li key={detail.Id} class="slds-text-body_small slds-m-vertical_x-small">{detail}</li>
+                </template>
+            </ul>
         </div>
     </lightning-card>
 </template>
